add material ui

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,8 @@
-.App {
-  text-align: center;
-}
+html,body{height:100%;}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,20 +11,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
 .loginwith_mobile {
   
   width: 50%;
@@ -82,3 +62,39 @@
 .another__login > a{
   text-decoration: none;
 }
+
+.sidebar{
+  position: absolute;
+  flex: 0.2;
+  text-align: center;
+  height: fit-content;
+  background-color: #683CB8;
+  height: 100%;
+  width: 20%;
+  
+  }
+
+  /* .sidebar__item{
+    position: sticky;
+    top: 80px;
+    flex: 0.2;
+    border-radius: 10px;
+    text-align: center;
+    height: fit-content;
+  } */
+
+  .sidebar li{
+    list-style: none;
+    min-height : 45px;
+    vertical-align : middle;
+    padding-top: 2rem;
+    align-items: center;
+    text-align: center;
+    padding-right: 5rem;
+  }
+
+  .sidebar li a{
+    text-decoration: none;
+    color: #ffffff;
+    
+  }
